# django-blog-project

./: .coveragerc  .gitignore  .travis.yml  README.md  makefile  pyproject.toml  pytest.ini
blog/: settings.py  urls.py
core/: models.py  urls.py  views.py
core/migrations/: 0001_initial.py  0002_alter_post_published_in.py  0002_auto_20210517_2321.py  0003_auto_20210528_2119.py  0003_auto_20210531_2129.py  0004_auto_20210528_2120.py  0005_auto_20210528_2151.py  0006_alter_post_published_in.py  0007_auto_20210528_2210.py  0008_alter_post_published_in.py
core/templates/core/: post_new.html
core/tests/: conftest.py  tests_models.py
statics/css/: style.css
website/blog/: admin.py  models.py  urls.py  views.py
website/blog/migrations/: 0001_initial.py  0002_auto_20210517_2321.py
website/blog/templates/blog/: home.html  post_delete.html  post_detail.html  post_edit.html
website/configs/: asgi.py  settings.py  urls.py  wsgi.py
website/templates/: base.html
website/website/: settings.py
