[tool.poetry]
name = "my-package"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "3.9"
Django = "^3.2.3"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
isort = "^5.8.0"
pycodestyle = "^2.7.0"
tox = "^3.23.1"
tox-poetry = "^0.3.0"
ipdb = "^0.13.7"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79

[tool.isort]
multi_line_output = 3
profile = 'black'
